@@ -3,6 +3,9 @@
    - itojun@cvs.openbsd.org 2002/10/16 14:31:48
      [sftp-common.c]
      64bit pedant.  %llu is "unsigned long long".  markus ok
+   - markus@cvs.openbsd.org 2002/10/23 10:32:13
+     [packet.c]
+     use %u for u_int
 
 20021021
  - (djm) Bug #400: Kill ssh-rand-helper children on timeout, patch from 
